# my-website

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  Trunk.toml  deployment.sh  gatsby-browser.js  gatsby-config.js  gatsby-node.js  index.html  netlify.toml  nuxt.config.ts  package.json  stats.json  tailwind.config.js  tailwind.config.ts  tailwind.css  trunk.toml  tsconfig.json  tslint.json  vue.config.js
.github/workflows/: rust.yml
assets/styles/: global.scss  mixins.scss
components/: Introduction.tsx  Nav.tsx
components/Skills/: SkillElement.tsx  Skills.tsx
components/Timeline/: TimelineContainer.tsx  TimelineElement.tsx
config/: definitions.ts  webpack.config.base.ts  webpack.config.dev.ts  webpack.config.prod.ts
config/environment/: env.d.ts
content/pages/: index.yaml  privacy.md
content/timeline-posts/: 1.yaml  10.yaml  11.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml
layouts/: default.tsx
pages/: cv.tsx  index.tsx
public/: index.html
src/: App.tsx  App.vue  components.rs  definitions.ts  main.rs  main.ts  models.rs  pages.rs  router.ts  style.min.css  tailwind.css  variables.css
src/components/: Introduction.vue  Nav.vue  footer.rs  header.rs  page.rs  testimonial.rs  testimonials.rs  timeline_container.rs  timeline_element.rs  timeline_row.rs  timeline_technology.rs
src/hooks/: resize-hooks.ts
src/model/: SkillModel.ts  TImelineElementModel.ts
src/models/: index_content.rs  timeline_post.rs
src/pages/: 404.tsx  contactpage.tsx  home.rs  imprint.rs  imprint.tsx  index.tsx  (+2 more)
static/: app.js  index.html
(+63 files in other folders)
