[package]
edition = "2021"
name = "my-website"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.5.0"
log = "0.4.6"
reqwasm = "0.3.1"
reqwest = "0.11.8"
serde = "1.0"
serde_yaml = "0.8"
wasm-bindgen-futures = "0.4.28"
wasm-logger = "0.2.0"
web-sys = "0.3.55"
yew = "0.19"
